--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,7 @@
               <a class="btn btn-link" href="">Reservation</a>
               <a class="btn btn-link" href="">Privacy Policy</a>
               <a class="btn btn-link" href="">Terms & Condition</a>
+              <a class="btn btn-link" href="product.html">Products</a>
             </div>
             <div class="col-lg-3 col-md-6">
               <h4
