favicon icon , product page issue , and options

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="" name="description" />
 
     <!-- Favicon -->
-    <link href="./img/madhu-logo.jpg" rel="icon" />
+    <link href="./img/seeds-seads-1.png" rel="icon" />
 
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
