--- a/product.html
+++ b/product.html
@@ -306,7 +306,7 @@
     <meta charset="utf-8">
     <title>Madhu Agri Seeds</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/seeds-seads-1.png" rel="icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap" rel="stylesheet">
@@ -336,7 +336,7 @@
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link">Service</a>
                     <a href="menu.html" class="nav-item nav-link">Products</a>
-                    <a href="product.html" class="nav-item nav-link">Products</a>
+                   
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
@@ -384,9 +384,22 @@
                         </small>
                     </p>
                     <h2 class="text-primary mb-4" id="price"></h2>
-                    <div class="d-flex mb-4">
+                    <!-- <div class="d-flex mb-4">
                         <input class="form-control form-control-lg" type="number" value="1" min="1" style="width: 100px;">
+                    </div> -->
+                    <div class="d-flex mb-4">
+                        <select class="form-control form-control-lg" style="width: 200px;" placeholder="select option">
+                            <option value="" disabled selected>Select an option...</option>
+                            <option value="1"> 1</option>
+                            <option value="2"> 2</option>
+                            <option value="3"> 3</option>
+                            <option value="4"> 4</option>
+                            <option value="5"> 5</option>
+                            <option value="6"> 6</option>
+                            <!-- Add more options as needed -->
+                        </select>
                     </div>
+                    
                     <div class="d-flex pt-2">
                         <strong class="me-2">Share:</strong>
                         <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
