done with content given

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
+            <a href="" class="btn btn-primary py-2 px-4">Book a Table</a>
           </div>
         </nav>
 
@@ -128,9 +128,9 @@
                     We deliver unparalleled value to farmers with premium quality seeds. Trusted for reliability, we sow the seeds of trust in every harvest.
                 </p>
                 <a
-                  href=""
+                href="tel:+919394894949"
                   class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft"
-                  >Book A Table</a
+                  >Call +91 93948 94949</a
                 >
               </div>
               <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -154,10 +154,9 @@
               <div class="service-item rounded pt-3">
                 <div class="p-4">
                   <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
-                  <h5>Master Chefs</h5>
+                  <h5>Pure & Reliable</h5>
                   <p>
-                    Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita
-                    amet diam
+                    Tested & Certified for high germination rates & robust growth
                   </p>
                 </div>
               </div>
@@ -166,10 +165,10 @@
               <div class="service-item rounded pt-3">
                 <div class="p-4">
                   <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
-                  <h5>Quality Food</h5>
+                  <h5>Affordable
+                  </h5>
                   <p>
-                    Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita
-                    amet diam
+                    We offer you high quality premium seeds within your budget
                   </p>
                 </div>
               </div>
@@ -178,10 +177,11 @@
               <div class="service-item rounded pt-3">
                 <div class="p-4">
                   <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
-                  <h5>Online Order</h5>
+                  <h5>Timely Delivery
+                  </h5>
                   <p>
-                    Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita
-                    amet diam
+                    Prompt and reliable delivery of all seeds every time you need them
+
                   </p>
                 </div>
               </div>
@@ -190,10 +190,9 @@
               <div class="service-item rounded pt-3">
                 <div class="p-4">
                   <i class="fa fa-3x fa-headset text-primary mb-4"></i>
-                  <h5>24/7 Service</h5>
+                  <h5>Trusted by many</h5>
                   <p>
-                    Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita
-                    amet diam
+                    Join our family of satisfied farmers who trust our seeds season after season
                   </p>
                 </div>
               </div>
@@ -247,19 +246,23 @@
                 About Us
               </h5>
               <h1 class="mb-4">
-                Welcome to
-                <i class="fa fa-utensils text-primary me-2"></i>Restoran
+                Madhu Agri Seeds
+                <!-- <i class="fa fa-utensils text-primary me-2"></i> -->
+                 <!-- <img src="./img/madhu-logo.jpg" class ="fa fa-utensils text-primary me-2"> -->
+               
               </h1>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet
-                lorem sit.
+                At Madhu Seeds, we prioritize your success with top-tier seeds. Our commitment to innovation and quality ensures you get the best yield possible.
+
+
               </p>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
+
+
+Benefit from our expert support and seamless ordering process and experience the trust and reliability that countless farmers enjoy. Grow with us! Try our seeds today!
+ 
               </p>
+              
               <div class="row g-4 mb-4">
                 <div class="col-sm-6">
                   <div
@@ -285,16 +288,17 @@
                       class="flex-shrink-0 display-5 text-primary mb-0"
                       data-toggle="counter-up"
                     >
-                      50
+                      500
                     </h1>
                     <div class="ps-4">
-                      <p class="mb-0">Popular</p>
-                      <h6 class="text-uppercase mb-0">Master Chefs</h6>
+                      <p class="mb-0">500+ </p>
+                      <h6 class="text-uppercase mb-0">Happy Farmer Families</h6>
                     </div>
                   </div>
                 </div>
               </div>
-              <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+              <a class="btn btn-primary py-3 px-5 mt-2" href="">See Catalogue
+              </a>
             </div>
           </div>
         </div>
