--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Benefit from our expert support and seamless ordering process and experience the
                     </h1>
                     <div class="ps-4">
                       <p class="mb-0">500+ </p>
-                      <h6 class="text-uppercase mb-0">Happy Farmer Families</h6>
+                      <h6 class="text-uppercase mb-0" id="farmer">Happy Farmer Families</h6>
                     </div>
                   </div>
                 </div>
