--- a/product.html
+++ b/product.html
@@ -357,7 +357,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
+                <a href="" class="btn btn-primary py-2 px-4">Contact Us</a>
             </div>
         </nav>
 
