--- a/about.html
+++ b/about.html
@@ -98,18 +98,35 @@
                     <div class="col-lg-6">
                         <div class="row g-3">
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
+                              <img
+                                class="img-fluid rounded w-100 wow zoomIn"
+                                data-wow-delay="0.1s"
+                                src="img/improved-bahubali+.jpg"
+                              />
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg" style="margin-top: 25%;">
+                              <img
+                                class="img-fluid rounded w-75 wow zoomIn"
+                                data-wow-delay="0.3s"
+                                src="img/IMPROVED- MADHU - 03.jpg"
+                                style="margin-top: 25%"
+                              />
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                              <img
+                                class="img-fluid rounded w-75 wow zoomIn"
+                                data-wow-delay="0.5s"
+                                src="img/IMPROVED - PUNJAB - 64.jpg"
+                              />
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
+                              <img
+                                class="img-fluid rounded w-100 wow zoomIn"
+                                data-wow-delay="0.7s"
+                                src="img/IMPROVED - MADHU SWARNA.jpg"
+                              />
                             </div>
-                        </div>
+                          </div>
                     </div>
                     <div class="col-lg-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>
