--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                   <img
                     class="img-fluid rounded w-100 wow zoomIn"
                     data-wow-delay="0.1s"
-                    src="img/about-1.jpg"
+                    src="img/improved-bahubali+.jpg"
                   />
                 </div>
                 <div class="col-6 text-start">
                   <img
                     class="img-fluid rounded w-75 wow zoomIn"
                     data-wow-delay="0.3s"
-                    src="img/about-2.jpg"
+                    src="img/IMPROVED- MADHU - 03.jpg"
                     style="margin-top: 25%"
                   />
                 </div>
@@ -227,14 +227,14 @@
                   <img
                     class="img-fluid rounded w-75 wow zoomIn"
                     data-wow-delay="0.5s"
-                    src="img/about-3.jpg"
+                    src="img/IMPROVED - PUNJAB - 64.jpg"
                   />
                 </div>
                 <div class="col-6 text-end">
                   <img
                     class="img-fluid rounded w-100 wow zoomIn"
                     data-wow-delay="0.7s"
-                    src="img/about-4.jpg"
+                    src="img/IMPROVED - MADHU SWARNA.jpg"
                   />
                 </div>
               </div>
