--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@ Benefit from our expert support and seamless ordering process and experience the
               <h5
                 class="section-title ff-secondary text-start text-primary fw-normal"
               >
-                Reservation
+              Try our Seeds Today!
               </h5>
-              <h1 class="text-white mb-4">Book A Table Online</h1>
+              <h1 class="text-white mb-4">Have a query? Contact us!</h1>
             
               <form id="reservationForm">
                 <div class="row g-3">
@@ -383,7 +383,8 @@ Benefit from our expert support and seamless ordering process and experience the
                         </div>
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
+                        <button class="btn btn-primary w-100 py-3" type="submit">SEND
+                        </button>
                     </div>
                 </div>
             </form>
@@ -435,9 +436,10 @@ Benefit from our expert support and seamless ordering process and experience the
             <h5
               class="section-title ff-secondary text-center text-primary fw-normal"
             >
-              Team Members
+            Expert Partners
+
             </h5>
-            <h1 class="mb-5">Our Master Chefs</h1>
+            <h1 class="mb-5">Our Seasoned & Skilled Partners</h1>
           </div>
           <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -532,7 +534,7 @@ Benefit from our expert support and seamless ordering process and experience the
             <h5
               class="section-title ff-secondary text-center text-primary fw-normal"
             >
-              Testimonial
+            Testimonials
             </h5>
             <h1 class="mb-5">Our Clients Say!!!</h1>
           </div>
@@ -540,8 +542,7 @@ Benefit from our expert support and seamless ordering process and experience the
             <div class="testimonial-item bg-transparent border rounded p-4">
               <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
               <p>
-                Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-                stet amet eirmod eos labore diam
+                నేను గత ఐదేళ్ళ నుండి మీ కంపెనీ నుండి వరి విత్తనాలు కొనుగోలు చేస్తున్నాను. నాణ్యంగా ఉండటంతో నా పంట దిగుబడి చాలా మెరుగుపడింది
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -550,7 +551,8 @@ Benefit from our expert support and seamless ordering process and experience the
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h5 class="mb-1">Client Name</h5>
+                  <h5 class="mb-1">Ramesh
+                  </h5>
                   <small>Profession</small>
                 </div>
               </div>
@@ -558,8 +560,8 @@ Benefit from our expert support and seamless ordering process and experience the
             <div class="testimonial-item bg-transparent border rounded p-4">
               <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
               <p>
-                Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-                stet amet eirmod eos labore diam
+                మీరు అందించే వరి విత్తనాలు విత్తడానికి సులభంగా మరియు వృద్ధి కోసం బలంగా ఉంటాయి.  ప్రతి సారి మంచి ఫలితాలు పొందుతున్నాను. 
+
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -568,7 +570,8 @@ Benefit from our expert support and seamless ordering process and experience the
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h5 class="mb-1">Client Name</h5>
+                  <h5 class="mb-1">Srinivas Rao
+                  </h5>
                   <small>Profession</small>
                 </div>
               </div>
@@ -576,8 +579,7 @@ Benefit from our expert support and seamless ordering process and experience the
             <div class="testimonial-item bg-transparent border rounded p-4">
               <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
               <p>
-                Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-                stet amet eirmod eos labore diam
+                Excellent company. delivery on time. stock availble well. always purchase here.
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -586,7 +588,7 @@ Benefit from our expert support and seamless ordering process and experience the
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h5 class="mb-1">Client Name</h5>
+                  <h5 class="mb-1">Krishna Reddy</h5>
                   <small>Profession</small>
                 </div>
               </div>
@@ -594,8 +596,7 @@ Benefit from our expert support and seamless ordering process and experience the
             <div class="testimonial-item bg-transparent border rounded p-4">
               <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
               <p>
-                Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-                stet amet eirmod eos labore diam
+                నేను నా రెండు ఎకరాలు కౌలు కి ఇచ్చాను, విత్తనాలు ఇక్కడనుండి కొని పంపిస్తున్న, నాలుగు సంవత్సరాల నుండి. మంచి షాపు 
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -604,7 +605,7 @@ Benefit from our expert support and seamless ordering process and experience the
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h5 class="mb-1">Client Name</h5>
+                  <h5 class="mb-1">Satish</h5>
                   <small>Profession</small>
                 </div>
               </div>
@@ -621,17 +622,21 @@ Benefit from our expert support and seamless ordering process and experience the
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Reservation</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact </a>
+                    <a class="btn btn-link" href="menu.html">Products</a>
+                    <a class="btn btn-link" href="service.html">Why us ?</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>3-206, bornapally, Huzurabad, Telangana - 505468
+                    </p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> 
+ 	
+                      .+91 9406300009 or +91 7489090009</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>hello@madhuseeds.in
+                    </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -642,9 +647,14 @@ Benefit from our expert support and seamless ordering process and experience the
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
                     <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                    <p>09AM - 09PM</p>
-                    <h5 class="text-light fw-normal">Sunday</h5>
-                    <p>10AM - 08PM</p>
+                    <p>9 AM to 6 PM
+                    </p>
+                    <h5 class="text-light fw-normal">Seed Licenses:
+                     
+                      </h5>
+                    <p> 1905 (Telangana)
+                      RS/457/1403/46/2022 (M.P)
+                      CGSLSPS11691 (C.G)</p>
                 </div>
             </div>
         </div>
