--- a/testimonial.html
+++ b/testimonial.html
@@ -156,17 +156,21 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Reservation</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact </a>
+                    <a class="btn btn-link" href="menu.html">Products</a>
+                    <a class="btn btn-link" href="service.html">Why us ?</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>3-206, bornapally, Huzurabad, Telangana - 505468
+                    </p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> 
+ 	
+                      .+91 9406300009 or +91 7489090009</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>hello@madhuseeds.in
+                    </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -177,9 +181,14 @@
                 <div class="col-lg-4 col-md-6">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
                     <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                    <p>09AM - 09PM</p>
-                    <h5 class="text-light fw-normal">Sunday</h5>
-                    <p>10AM - 08PM</p>
+                    <p>9 AM to 6 PM
+                    </p>
+                    <h5 class="text-light fw-normal">Seed Licenses:
+                     
+                      </h5>
+                    <p> 1905 (Telangana)
+                      RS/457/1403/46/2022 (M.P)
+                      CGSLSPS11691 (C.G)</p>
                 </div>
             </div>
         </div>
